# github-action-study

./: CMakeLists.txt  main.cpp
.github/workflows/: learn-github-actions.yml  linux2.yml  windows.yml
